// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect :props :clearable 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :defaultValue 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"><span class="t-select__placeholder" style="display: none;">请选择</span><span class="t-tree-select t-tag-prefix"><span class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close" title="shenzhen"><span class="t-tag--text" style="max-width: 300px;">shenzhen</span><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close t-tag__icon-close">
      <path fill="currentColor" d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z" fill-opacity="0.9"></path>
    </svg></span><span class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close" title="guangzhou"><span class="t-tag--text" style="max-width: 300px;">guangzhou</span><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close t-tag__icon-close">
      <path fill="currentColor" d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z" fill-opacity="0.9"></path>
    </svg></span></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+2</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :disabled 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-is-disabled t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-disabled t-is-default"><input disabled="disabled" autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :empty string 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :filterable 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder" style="display: none;">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :loading 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :loadingText 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :max 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :minCollapsedNum 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+-1</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :multiple 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :placeholder 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">please select address</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="please select address" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :popupProps 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :size 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-l t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-l t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-l t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: large;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-l t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :treeProps 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :value 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"><span class="t-select__placeholder" style="display: none;">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span><span title="shenzhen" class="t-select__single t-tree-select t-single-suffix">shenzhen</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="shenzhen" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect :props :valueType 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"><span class="t-select__placeholder" style="display: none;">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span><span title="[object Object]" class="t-select__single t-tree-select t-single-suffix">[object Object]</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="[object Object]" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <collapsedItems> 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <empty> 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <loadingText> 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <prefixIcon> 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-has-prefix t-select__popup-reference"><span class="t-select__left-icon"><div><i>icon</i></div></span><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect function :collapsedItems 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect function :empty 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect function :loadingText 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-select__popup-reference"><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;

exports[`TreeSelect function :prefixIcon 1`] = `
<div class="t-select__wrap">
  <div class="t-select t-select-polyfill t-size-m t-has-prefix t-select__popup-reference"><span class="t-select__left-icon"></span><span class="t-select__placeholder">请选择</span><span class="t-tree-select t-tag-prefix"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
    <div class="t-input__wrap t-select__input" style="display: none;">
      <div class="t-input t-size-m t-is-default"><input autocomplete="" placeholder="" type="text" unselectable="off" class="t-input__inner"></div>
    </div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill" style="font-size: medium;">
      <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
    </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear" style="display: none;">
      <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
    </svg>
    <div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
        <foreignObject x="1" y="1" width="12" height="12">
          <div class="t-loading__gradient-conic"></div>
        </foreignObject>
      </svg></div>
  </div>
</div>
`;
